# model_predictive_control

./: .gitmodules  Driver_code.py  ISSUE_TEMPLATE.md  MPC.py  README.md  equations.md
avoid/: package.xml  setup.cfg  setup.py
avoid/avoid/: cv.py
my_bot/: package.xml  setup.py
my_bot/my_bot/: package.xml  setup.py
my_bot/urdf/: myrobot.xacro  robot.gazebo
my_bot/worlds/: custom_world.world
my_robot/: package.xml  setup.py
my_robot/launch/: my_robot_gazebo.launch.py
my_robot/my_robot/: collision_avoidance.py  mpc_control.py  package.xml  pd_control.py  setup.py  teleop.py
my_robot/urdf/: myrobot.xacro  robot.gazebo
my_world/: package.xml  setup.cfg  setup.py
turtlebot3/turtlebot3_simulations/turtlebot3_gazebo/launch/: custom_world.launch.py
turtlebot3/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_waffle/: custom_world.world  model-1_4.sdf  model.sdf
ubot_cartographer/: CHANGELOG.rst  CMakeLists.txt  package.xml
ubot_cartographer/launch/: cartographer.launch.py
ubot_control/: CMakeLists.txt  package.xml
ubot_control/launch/include/: control.py
ubot_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
ubot_description/config/: diffdrive.yaml
ubot_description/launch/: display.launch.py  robot.launch.py  rviz2.launch.py  ubot_state_publisher.launch.py
ubot_description/param/: burger.yaml  diffdrive.yaml  waffle.yaml
ubot_description/urdf/: ubot_burger.urdf  ubot_burger_gazebo.urdf  ubot_waffle.urdf  ubot_waffle_pi.urdf
ubot_example/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
ubot_example/ubot_example/ubot_obstacle_detection/: main.py  ubot_obstacle_detection.py
ubot_example/ubot_example/ubot_patrol_client/: main.py  ubot_patrol_client.py
ubot_example/ubot_example/ubot_patrol_server/: main.py  ubot_path.py  ubot_patrol_server.py
ubot_example/ubot_example/ubot_position_control/: main.py  ubot_path.py  ubot_position_control.py
ubot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
ubot_gazebo/config/: diffdrive.yaml
ubot_gazebo/launch/: 09-joints.launch.py  09a-minimal.launch.py  13-diffdrive.launch.py  gazebo.launch.py
ubot_gazebo/urdf/: ubot_burger.urdf
ubot_msgs/: CMakeLists.txt  package.xml
ubot_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
ubot_navigation/launch/: navigation.launch.py
ubot_teleop/: package.xml  setup.cfg  setup.py
ubot_teleop/ubot_teleop/script/: teleop_keyboard.py
