<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ubot_control</name>
  <version>3.0.4</version>
  <description>Provides the diff-drive controller for the ubot Robot.</description>
  <maintainer email="vvs@umd.edu">VVS</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>rsl</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_flake8</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_pep257</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
